--- a/rest/.htaccess
+++ b/rest/.htaccess
@@ -17,9 +17,17 @@
     RewriteCond %{REQUEST_FILENAME} !-s
 	RewriteRule ^(application.*)$ ApplicationController.php?request=$1 [QSA,NC,L]
 
-	##RewriteCond %{REQUEST_FILENAME} -d
-	##RewriteRule ^(.*)$ api.php [QSA,NC,L]
+	RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME} !-s
+	RewriteRule ^(project.*)$ ProjectController.php?request=$1 [QSA,NC,L]
 
-	##RewriteCond %{REQUEST_FILENAME} -s
-	##RewriteRule ^(.*)$ api.php [QSA,NC,L]	
+	RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME} !-s
+	RewriteRule ^(file.*)$ FileController.php?request=$1 [QSA,NC,L]
+
+	RewriteCond %{REQUEST_FILENAME} -d
+	RewriteRule ^(file.*)$ FileController.php [QSA,NC,L]
+
+	RewriteCond %{REQUEST_FILENAME} -s
+	RewriteRule ^(file.*)$ FileController.php [QSA,NC,L]	
 </IfModule>
