--- a/html/dev/prepros.cfg
+++ b/html/dev/prepros.cfg
@@ -1388,10 +1388,10 @@
           "output": "img/logo.png",
           "name": "logo.png",
           "category": "IMAGE",
-          "size": 26605,
+          "size": 26602,
           "type": "png",
           "initialSize": 26605,
-          "optimized": false,
+          "optimized": true,
           "height": 1500,
           "width": 1500
         },
@@ -1401,10 +1401,10 @@
           "output": "img/bg_slider.png",
           "name": "bg_slider.png",
           "category": "IMAGE",
-          "size": 79519,
+          "size": 76770,
           "type": "png",
           "initialSize": 79519,
-          "optimized": false,
+          "optimized": true,
           "height": 600,
           "width": 1280
         },
@@ -1414,10 +1414,10 @@
           "output": "img/logo_invert.png",
           "name": "logo_invert.png",
           "category": "IMAGE",
-          "size": 20714,
+          "size": 15045,
           "type": "png",
           "initialSize": 20714,
-          "optimized": false,
+          "optimized": true,
           "height": 230,
           "width": 200
         },
@@ -1427,10 +1427,10 @@
           "output": "img/logo_inline.png",
           "name": "logo_inline.png",
           "category": "IMAGE",
-          "size": 39903,
+          "size": 36826,
           "type": "png",
           "initialSize": 39903,
-          "optimized": false,
+          "optimized": true,
           "height": 213,
           "width": 600
         },
@@ -1453,10 +1453,10 @@
           "output": "img/logo_symbol.png",
           "name": "logo_symbol.png",
           "category": "IMAGE",
-          "size": 16567,
+          "size": 13970,
           "type": "png",
           "initialSize": 16567,
-          "optimized": false,
+          "optimized": true,
           "height": 229,
           "width": 200
         },
@@ -1466,10 +1466,10 @@
           "output": "img/bg_pattern.png",
           "name": "bg_pattern.png",
           "category": "IMAGE",
-          "size": 10801,
+          "size": 10128,
           "type": "png",
           "initialSize": 10801,
-          "optimized": false,
+          "optimized": true,
           "height": 150,
           "width": 150
         },
@@ -1479,10 +1479,10 @@
           "output": "img/frontend/logos_sm.png",
           "name": "logos_sm.png",
           "category": "IMAGE",
-          "size": 5773,
+          "size": 5771,
           "type": "png",
           "initialSize": 5773,
-          "optimized": false,
+          "optimized": true,
           "height": 124,
           "width": 180
         },
@@ -1492,10 +1492,10 @@
           "output": "img/frontend/logos_fz.png",
           "name": "logos_fz.png",
           "category": "IMAGE",
-          "size": 5220,
+          "size": 5218,
           "type": "png",
           "initialSize": 5220,
-          "optimized": false,
+          "optimized": true,
           "height": 124,
           "width": 180
         },
@@ -1505,10 +1505,10 @@
           "output": "img/frontend/logos_t3n.png",
           "name": "logos_t3n.png",
           "category": "IMAGE",
-          "size": 5568,
+          "size": 5566,
           "type": "png",
           "initialSize": 5568,
-          "optimized": false,
+          "optimized": true,
           "height": 124,
           "width": 180
         },
@@ -1518,10 +1518,10 @@
           "output": "img/frontend/poster.png",
           "name": "poster.png",
           "category": "IMAGE",
-          "size": 34781,
+          "size": 34778,
           "type": "png",
           "initialSize": 34781,
-          "optimized": false,
+          "optimized": true,
           "height": 700,
           "width": 471
         },
